change _blank target

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <link rel="stylesheet" href="css/theme-style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <!-- FAVICON - **WAIT** DESIGN-->
-    <!-- link(rel='shortcut icon', type='image/x-icon', href='img/favicon-32x32.ico')-->
-    <link rel="canonical" href="https://findcep.labunix.dev/">
+    <link rel="shortcut icon" type="image/x-icon" href="img/images/Favicon_app.png">
+    <link rel="canonical" href="https://findcep.labunix.dev/index.html">
     <!-- **WAIT*** TRADUCAO-->
     <!--link(rel='alternate', href='https://findcep.labunix.dev/en', hreflang='en')-->
     <!-- Structured Data Organization  FindCEP-->
@@ -53,7 +53,7 @@
           <div class="col-md-12">
             <div class="navbar-header">
               <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#myNavbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand ex" href="https://www.findcep.com/"><img class="main-logo" src="images/sassy_white.png" alt="Home"><img class="logo-blue" src="images/sassy_black.png" alt="Home"></a>
-              <!-- Get-Now-Button--><a class="btn-getnow new_btn" href="#">Teste Agora</a>
+              <!-- Get-Now-Button--><a class="btn-getnow new_btn" href="#">Try for free</a>
             </div>
             <div class="collapse navbar-collapse multi_page_menu_item" id="myNavbar">
               <ul class="nav navbar-nav navbar-right multi" id="menu-one-page">
@@ -72,9 +72,9 @@
     </nav>
     <section class="saas_newsletter_area" id="newsletter">
       <div class="container">
-        <div class="new_sectitle br_none pb_0">
+        <div class="new_sectitle br_none pb_0"><br>
           <h1 class="s_banner_title">CEP API</h1>
-          <h2 class="s_banner_title">Localizar o CEP<br>nunca foi tão fácil</h2>
+          <h2 class="s_banner_title">Localizar o CEP&nbsp;<br>nunca foi tão fácil</h2>
         </div>
         <form class="n_subscription saas_subscribe findcep" method="get" novalidate="true" _lpchecked="1">
           <div class="form-group">
@@ -93,14 +93,14 @@
             <div class="n_features_item">
               <div class="DISABLE_n_round_icon" hidden="true"><img src="" alt=""></div>
               <h3>Fácil</h3>
-              <p><a target="_blank" href="https://www.correios.com.br/enviar-e-receber/ferramentas/cep/o-que-e-cep">CEP API</a>é fácil e simples de usar, sem setup e compatível com qualquer aplicação. Faça um upgrade no seu negocio</p>
+              <p><a target="noreferrer" href="https://www.correios.com.br/enviar-e-receber/ferramentas/cep/o-que-e-cep">CEP API</a>é fácil e simples de usar, sem setup e compatível com qualquer aplicação. Faça um upgrade no seu negocio</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="n_features_item">
               <div class="DISABLE_n_round_icon" hidden="true"><img src="" alt=""></div>
               <h3>Rápido</h3>
-              <p>Diminua o tempo de cadastro de seu cliente, com o<a target="_blank" href="https://pt.wikipedia.org/wiki/Web_service">webservice</a>CEP o endereço é localizado em apenas 50ms.</p>
+              <p>Diminua o tempo de cadastro de seu cliente, com o<a target="noreferrer" href="https://pt.wikipedia.org/wiki/Web_service">webservice</a>CEP o endereço é localizado em apenas 50ms.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-4 col-xs-12">
@@ -148,7 +148,7 @@
             <div class="saas_features_item">
               <div class="round_icon"><img src="images/new/icon/d-f3.png" alt=""></div>
               <h3>Códigos dos Municípios - IBGE</h3>
-              <p>Nossa base é sincronizada com a última versão da base disponibilizada pelo<a taget="_blank" href="https://www.ibge.gov.br/explica/codigos-dos-municipios.php">IBGE</a>, Incluindo corretamente os códigos dos distritos e sub-distritos.</p>
+              <p>Nossa base é sincronizada com a última versão da base disponibilizada pelo<a taget="noreferrer" href="https://www.ibge.gov.br/explica/codigos-dos-municipios.php">IBGE</a>, Incluindo corretamente os códigos dos distritos e sub-distritos.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12">
@@ -162,14 +162,14 @@
             <div class="saas_features_item">
               <div class="round_icon"><img src="images/new/icon/d-f6.png" alt=""></div>
               <h3>Sempre Online</h3>
-              <p>Desde 2016, o SLA Anual do FindCEP tem sido maior que<a target="_blank" href="https://uptime.is/99.99">99.99%.</a>Não dependa mais de api's grátis que não garantem a disponibilidade do serviço. Se o CEP parar seu negocio também para.</p>
+              <p>Desde 2016, o SLA Anual do FindCEP tem sido maior que<a target="noreferrer" href="https://uptime.is/99.99">99.99%.</a>Não dependa mais de api's grátis que não garantem a disponibilidade do serviço. Se o CEP parar seu negocio também para.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="saas_features_item">
               <div class="round_icon"><img src="images/new/icon/d-f1.png" alt=""></div>
               <h3>Classificação de Localidades</h3>
-              <p>Só o FindCEP inclui a classificacao conforme a<a target="_blank" href="https://www.correios.com.br/enviar-e-receber/ferramentas/cep/estrutura-do-cep">estrutura do cep</a>contendo localidades não codificadas (cep único) e localidades codificadas por logradouros como caixa postal comunitária, grande úsuario, ceps especiais entre outros.</p>
+              <p>Só o FindCEP inclui a classificacao conforme a<a target="noreferrer" href="https://www.correios.com.br/enviar-e-receber/ferramentas/cep/estrutura-do-cep">estrutura do cep</a>contendo localidades não codificadas (cep único) e localidades codificadas por logradouros como caixa postal comunitária, grande úsuario, ceps especiais entre outros.</p>
             </div>
           </div>
         </div>
