adjust best practices

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="css/theme-style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <!-- FAVICON - **WAIT** DESIGN-->
-    <link rel="shortcut icon" type="image/x-icon" href="img/images/Favicon_app.png">
+    <link rel="shortcut icon" type="image/x-icon" href="images/Favicon_app.png">
     <link rel="canonical" href="https://findcep.labunix.dev/index.html">
     <!-- **WAIT*** TRADUCAO-->
     <!--link(rel='alternate', href='https://findcep.labunix.dev/en', hreflang='en')-->
@@ -422,8 +422,9 @@
     <script src="_saas/vendors/imagesloaded/imagesloaded.pkgd.min.js"></script>
     <script src="_saas/vendors/isotope/isotope-min.js"></script>
     <script src="_saas/vendors/magnify-pop/jquery.magnific-popup.min.js"></script>
-    <script src="_saas/js/plugins.js"></script>
     <script src="_saas/vendors/scroll/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="_saas/vendors/slick/slick.min.js"></script>
+    <script src="_saas/js/plugins.js"></script>
     <script src="_saas/js/main.js"></script>
     <!-- SASSY JS TEMPLATE-->
     <script src="js/jquery.min.js"></script>
