--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
     </nav>
     <section class="saas_newsletter_area" id="newsletter">
       <div class="container">
-        <div class="new_sectitle br_none pb_0"><br>
-          <h1 class="s_banner_title">CEP API</h1>
-          <h2 class="s_banner_title">Localizar o CEP&nbsp;<br>nunca foi tão fácil</h2>
+        <div class="new_sectitle br_none pb_0">
+          <p class="s_banner_title">A</p>
+          <h1 class="s_banner_title">API CEP</h1>
+          <h2 class="s_banner_title">sempre atualizada para seu negócio.&nbsp;<br>Completa solução de localização de código postal  e endereços do BRASIL.</h2>
         </div>
         <form class="n_subscription saas_subscribe findcep" method="get" novalidate="true" _lpchecked="1">
           <div class="form-group">
@@ -86,45 +87,19 @@
         </form>
       </div>
     </section>
-    <section class="n_features_area pt_0" id="services">
+    <section>
       <div class="container">
         <div class="row">
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="n_features_item">
-              <div class="DISABLE_n_round_icon" hidden="true"><img src="" alt=""></div>
-              <h3>Fácil</h3>
-              <p><a target="noreferrer" href="https://www.correios.com.br/enviar-e-receber/ferramentas/cep/o-que-e-cep">CEP API</a>é fácil e simples de usar, sem setup e compatível com qualquer aplicação. Faça um upgrade no seu negocio</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="n_features_item">
-              <div class="DISABLE_n_round_icon" hidden="true"><img src="" alt=""></div>
-              <h3>Rápido</h3>
-              <p>Diminua o tempo de cadastro de seu cliente, com o<a target="noreferrer" href="https://pt.wikipedia.org/wiki/Web_service">webservice</a>CEP o endereço é localizado em apenas 50ms.</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="n_features_item">
-              <div class="DISABLE_n_round_icon" hidden="true"><img src="" alt=""></div>
-              <h3>Confiável</h3>
-              <p>O FindCEP entrega centenas de milhares de CEP's simultaneamente com 99.99% de disponibilidade.</p>
-            </div>
+          <div class="saas_section_title mb_70">
+            <h2>O que o FindCEP oferece para seu negócio?</h2>
+            <p>Oferece&nbsp;
+              <h2>busca e tratamento de CEPs</h2>
+            </p>
+            <p>(Código Endereçamento Postal) e&nbsp;
+              <h2>Endereços para o seu negócio online.</h2>
+            </p>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="sass_video_area" id="features">
-      <div class="container">
-        <div class="saas_section_title mb_70">
-          <h2>O que FindCEP oferece ao seu negócio?</h2>
-          <p>A API FindCEP é a mais ágil e completa solução<br>de localização de codigo postal e endereços no BRASIL.</p>
-          <h3>Base integrada com os Correios</h3>
-          <p>FindCEP oferece busca e tratamento de CEPs (Código Endereçamento Postal) e Endereços para o seu negócio online.</p>
-        </div>
-        <!--.saas_video-->
-        <!--  img(src='', alt='')-->
-        <!--  a.video_btn(href='#')-->
-        <!--    i.fa.fa-play-->
       </div>
     </section>
     <section class="saas_dashboard_features">
@@ -141,35 +116,35 @@
             <div class="saas_features_item">
               <div class="round_icon"><img src="images/new/icon/d-f4.png" alt=""></div>
               <h3>Taxa de Atualização</h3>
-              <p>A cada mês em media são atualizados cerca de 10 mil cep's. A maioria são novas inclusões, mas atualização e remoção de ceps também é comum.</p>
+              <p>A cada mês em media são atualizados cerca de 10 mil cep's para novas inclusões, atualização e remoções.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="saas_features_item">
               <div class="round_icon"><img src="images/new/icon/d-f3.png" alt=""></div>
               <h3>Códigos dos Municípios - IBGE</h3>
-              <p>Nossa base é sincronizada com a última versão da base disponibilizada pelo<a taget="noreferrer" href="https://www.ibge.gov.br/explica/codigos-dos-municipios.php">IBGE</a>, Incluindo corretamente os códigos dos distritos e sub-distritos.</p>
+              <p>Nossa base é sincronizada com a última versão da base disponibilizada pelo&nbsp;<a taget="noreferrer" href="https://www.ibge.gov.br/explica/codigos-dos-municipios.php">IBGE</a>, Incluindo corretamente os códigos dos distritos e sub-distritos.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="saas_features_item">
-              <div class="round_icon"><img src="images/new/icon/d-f5.png" alt=""></div>
-              <h3>Arquitetura</h3>
-              <p>O FindCEP fica hospedado na Cloud AWS, utilizando as melhores praticas do mercado. O produto foi desenvolvido para performar durante as Black-friday's</p>
+              <div class="round_icon"><img src="images/new/icon/d-f5.png" alt="Facilidade"></div>
+              <h3>Integração Rápida</h3>
+              <p>A nossa API CEP é simples de usar, com fácil integracão, sem custo de setup e compatível com seu negócio.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="saas_features_item">
-              <div class="round_icon"><img src="images/new/icon/d-f6.png" alt=""></div>
-              <h3>Sempre Online</h3>
-              <p>Desde 2016, o SLA Anual do FindCEP tem sido maior que<a target="noreferrer" href="https://uptime.is/99.99">99.99%.</a>Não dependa mais de api's grátis que não garantem a disponibilidade do serviço. Se o CEP parar seu negocio também para.</p>
+              <div class="round_icon"><img src="images/new/icon/d-f6.png" alt="Agilidade"></div>
+              <h3>Experiência do Cliente</h3>
+              <p>Diminua o tempo de cadastro de seu cliente, com a API CEP o endereço é localizado em apenas 50ms.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="saas_features_item">
-              <div class="round_icon"><img src="images/new/icon/d-f1.png" alt=""></div>
-              <h3>Classificação de Localidades</h3>
-              <p>Só o FindCEP inclui a classificacao conforme a<a target="noreferrer" href="https://www.correios.com.br/enviar-e-receber/ferramentas/cep/estrutura-do-cep">estrutura do cep</a>contendo localidades não codificadas (cep único) e localidades codificadas por logradouros como caixa postal comunitária, grande úsuario, ceps especiais entre outros.</p>
+              <div class="round_icon"><img src="images/new/icon/d-f1.png" alt="Confiabilidade"></div>
+              <h3>Taxa de Sucesso</h3>
+              <p>O FindCEP entrega milhares de CEP's simultaneamente com&nbsp;<a target="noreferrer" href="https://uptime.is/99.99">99.99% de disponibilidade.</a></p>
             </div>
           </div>
         </div>
@@ -187,7 +162,7 @@
             <div class="col-md-5 col-md-offset-1">
               <div class="saas_about_content text-left">
                 <h2 class="saas_h2 mt_0">Works on all platforms</h2>
-                <p class="n_title_p">O FindCEP é a mais ágil e completa solução de localizacação de endereços nacionais diretamente integrada com os Correios que oferece<br>Busca de CEPs e Endereços para o seu negócio online.</p><a class="saas_btn_two n_them_btn" href="">Veja mais</a>
+                <p class="n_title_p">O FindCEP é a mais ágil e completa solução de localização de endereços nacionais diretamente integrada com os Correios que oferece<br>Busca de CEPs e Endereços para o seu negócio online.</p><a class="saas_btn_two n_them_btn" href="">Veja mais</a>
               </div>
             </div>
           </div>
